<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".BasicActivity.MainActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Home_txt_offers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@string/offers"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/Home_txt_showOfers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="7dp"
                        android:text="@string/show_all"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/HomeFragment_offersRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/menu"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:id="@+id/HomeFragment_foodRound"
                        android:background="@color/colorWhite"
                        android:orientation="vertical"
                        app:corner_radius="10dp">

                        <ImageView
                            android:id="@+id/HomeFragment_foodImage"
                            android:layout_width="match_parent"
                            android:layout_height="270dp"
                            android:src="@drawable/food_image"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/HomeFragment_foodImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="@string/food"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorWhite"
                        android:id="@+id/HomeFragment_sweetRound"
                        android:orientation="vertical"
                        app:corner_radius="10dp">

                        <ImageView
                            android:id="@+id/HomeFragment_sweetImage"
                            android:layout_width="match_parent"
                            android:layout_height="270dp"
                            android:src="@drawable/sweet_image"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/HomeFragment_sweetImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="@string/sweet"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="80dp"
                        android:background="@color/colorWhite"
                        android:id="@+id/HomeFragment_mackupRound"
                        android:orientation="vertical"
                        app:corner_radius="10dp">

                        <ImageView
                            android:id="@+id/HomeFragment_mackupImage"
                            android:layout_width="match_parent"
                            android:src="@drawable/mackup_image"
                            android:layout_height="250dp"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/HomeFragment_mackupImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="@string/mackup"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:id="@+id/HomeFragment_monaHomeRound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorWhite"
                        android:orientation="vertical"
                        app:corner_radius="10dp">

                        <ImageView
                            android:id="@+id/HomeFragment_monaHomeImage"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:src="@drawable/mona_image"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/HomeFragment_monaHomeImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="Pantry victuals"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorWhite"
                        android:id="@+id/HomeFragment_crochetRound"
                        android:orientation="vertical"
                        app:corner_radius="15dp">

                        <ImageView
                            android:id="@+id/HomeFragment_crochetImage"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:src="@drawable/crochet_image"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/HomeFragment_crochetImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="@string/crochet"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="80dp"
                        android:background="@color/colorWhite"
                        android:orientation="vertical"
                        android:id="@+id/HomeFragment_sewingRound"
                        app:corner_radius="15dp">

                        <ImageView
                            android:id="@+id/HomeFragment_sewingImage"
                            android:layout_width="match_parent"
                            android:src="@drawable/sewing_image"
                            android:layout_height="290dp"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/HomeFragment_sewingImage"
                            android:background="@color/colorYello"
                            android:gravity="center"
                            android:text="@string/sewing"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold"/>
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>